# IntelliMedia-Notes

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: databasemanager.cpp.F4232E0F993E970C.idx  databasemanager.h.DF46F17280FF97AA.idx  main.cpp.62A48B8CF8347649.idx  mainwindow.cpp.663B67BF70289414.idx  mainwindow.h.95947AFD57E19EFE.idx  sidebarmanager.cpp.6C1AD11926A7693B.idx  sidebarmanager.h.C8E0DF9532A60C43.idx
.cursor/rules/: developpoint.mdc  notesrules.mdc
forms/: mainwindow.ui
resources/: resources.qrc
resources/qml/: AIView.qml  ActionButtons.qml  Animations.qml  CustomDialog.qml  FileContextMenu.qml  NoteTree.qml  SearchView.qml  Sidebar.qml  UserPanel.qml
resources/styles/: ai_assistant_dialog.qss  dark_theme.qss  light_theme.qss  style.qss
resources/translations/: intellimedia_notes_en_US.ts
src/: DeepSeekService.cpp  DeepSeekService.h  IAiService.h  aiassistantdialog.cpp  aiassistantdialog.h  databasemanager.cpp  databasemanager.h  fixedwidthfontcombo.h  main.cpp  mainwindow.cpp  mainwindow.h  searchmanager.cpp  searchmanager.h  settingsdialog.cpp  settingsdialog.h  sidebarmanager.cpp  sidebarmanager.h  texteditormanager.cpp  texteditormanager.h
